--- a/config/locales/fra/rights.yml
+++ b/config/locales/fra/rights.yml
@@ -41,14 +41,13 @@ fra:
     manage_incoming_delivery_modes: "Gérer les modes de livraisons entrantes"
     manage_incoming_payment_modes: "Gérer les modes d’encaissement"
     manage_incoming_payments: "Gérer les règlements de vente"
+    # manage_interventions: "Manage interventions"
     manage_inventories: "Gérer les inventaires"
     manage_journal_entries: "Gérer les écritures"
     manage_journals: "Gérer, clôturer, déclôturer les journaux"
     manage_land_parcels: "Gérer les îlots"
     manage_listings: "Gérer les extractions"
-    manage_mandates: "Gérer les responsabilités"
     manage_observations: "Gérer les observations"
-    manage_operations: "Gérer les travaux"
     manage_outgoing_delivery_modes: "Gérer les types de livraison"
     manage_outgoing_payment_modes: "Gérer les modes de décaissement"
     manage_outgoing_payments: "Gérer les décaissements"
