--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -434,11 +434,11 @@ arb:
       sales_invoices: "الفواتير" #?
       statistics: "الاحصائيات" #?
       undelivered_sales: "التسليم بالانتظار" #?
-    backend/mandates:
-      configure: "ترتيب التفويضات"
-      edit: "تعديل التفويض"
-      index: "تفويضات"
-      new: "انشاء تفويض"
+    backend/mandates:  #?
+      configure: "ترتيب التفويضات" #?
+      edit: "تعديل التفويض" #?
+      index: "تفويضات" #?
+      new: "انشاء تفويض" #?
     backend/matters:
       # edit: "Modifier la matière\_: %{name}"
       # index: "Matières"
@@ -742,11 +742,11 @@ arb:
       edit: "تعديل الاشتراك:  %{number} من %{start} الى %{finish}"
       # index: "Abonnements"
       new: "انشاء اشتراك جديد"
-    backend/tax_declarations:
-      edit: "انشاء تصريح"
-      index: "تصريح عن قيمة الضريبة الاضافية"
-      new: "Créer une déclaration"
-      show: "%{nature} للمدة الزمنية من %{started_at} الى %{stopped_at}"
+    backend/tax_declarations:  #?
+      edit: "انشاء تصريح" #?
+      index: "تصريح عن قيمة الضريبة الاضافية" #?
+      new: "Créer une déclaration" #?
+      show: "%{nature} للمدة الزمنية من %{started_at} الى %{stopped_at}" #?
     backend/taxes:
       edit: "تعديل الضريبة : %{name}"
       index: "الضرائب"
@@ -858,7 +858,7 @@ arb:
     # backend/listing_nodes: "Nœuds d’extractions"
     backend/listings: "الصادرات وارسال الرسائل"
     backend/management: "الادارة" #?
-    backend/mandates: "تفويضات"
+    backend/mandates: "تفويضات" #?
     # backend/matters: "Matières"
     # backend/medicines: "Médicaments"
     # backend/mineral_matters: "Matières minérales"
@@ -902,7 +902,7 @@ arb:
     backend/stocks: "وضع الاسهم" #?
     backend/subscription_natures: "انواع الاشتراك"
     # backend/subscriptions: "Abonnements"
-    backend/tax_declarations: "تصريح عن قيمة الضريبة الاضافية"
+    backend/tax_declarations: "تصريح عن قيمة الضريبة الاضافية" #?
     backend/taxes: "الضرائب"
     # backend/teams: "Équipes"
     backend/tools: "مادة" #?
