--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1183,6 +1183,7 @@ arb:
     current_financial_year: "الفترة المحاسبية الحالية" #?
     # current_healthy: "Bonne santé actuelle"
     # current_localization: "Current localization"
+    # current_memberships: "Current memberships"
     # current_mother_link: "Current mother link"
     # current_net_mass: "Dernière pesée"
     # current_ownership: "Current ownership"
