--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -770,6 +770,7 @@ eng:
     current_financial_year: "Current financial year" #?
     # current_healthy: "Bonne santé actuelle"
     # current_localization: "Current localization"
+    # current_memberships: "Current memberships"
     # current_mother_link: "Current mother link"
     # current_net_mass: "Dernière pesée"
     # current_ownership: "Current ownership"
