--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -32,6 +32,8 @@ jpn:
     backend/aggregators:
       # index: "Agrégateurs"
       # show: "%{name}"
+    backend/analyses: #?
+    backend/analysis_items: #?
     backend/analytic_distributions:
       # edit: "Modifier la répartition analytique"
       # index: "Répartitions analytiques"
