--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1030,7 +1030,9 @@ fra:
         fertility_index: "Index de fertilité"
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
-        geographic_coordinate: "Coordonnées géographiques"
+        # geolocation: "Geolocation"
+        # grains_area_density: "Grains area density"
+        # grains_count: "Grains count"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -1061,8 +1063,8 @@ fra:
         net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
+        # nitrogen_area_density: "Nitrogen area density"
         nitrogen_concentration: "Teneur en azote"
-        nitrogen_input_area_density: "Densité d’apport d’azote"
         nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
         nominal_storable_net_volume: "Capacité de stockage volumique nominale"
