Removes useless Backend::AnalysisItems controller and adds numbers on Analysis

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -164,7 +164,7 @@ arb:
         created_at: "انشأ في" #?
         last_name: "الاسم" #?
         nature: "النوع" #?
-        origin: "موقع اول مقابلة"
+        origin: "موقع اول مقابلة" #?
         outgoing_payments: "دفعات المشتريات" #?
         payment_mode_id: "اسلوب تسديد دفعة" #?
         reduction_rate: "سعر التخفيض" #?
@@ -1528,9 +1528,10 @@ arb:
     # maximal_length: "Longueur maximale"
     # maximal_value: "Valeur maximale"
     # measure_value: "Valeur de la mesure"
-    # measure_value_unit: "Measure value unit"
-    # measure_value_value: "Measure value value"
+    # measure_value_unit: "Unité de la mesure"
+    # measure_value_value: "Valeur de la mesure"
     # meat_withdrawal_period: "Délai d’attente (viande)"
+    # meeting_origin: "Origine de la rencontre"
     # member: "Membre"
     # members: "Membres"
     # memberships: "Membres du groupe"
