--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -30,7 +30,11 @@ eng:
     backend/aggregators:
       # index: "Agrégateurs"
       # show: "%{name}"
-    backend/analyses: #?
+    backend/analyses:
+      # edit: "Modifier l’analyse N°%{number}"
+      # index: "Analyses"
+      # new: "Nouvelle analyse"
+      # show: "Analyse N°%{number}"
     backend/analysis_items: #?
     backend/analytic_distributions:
       edit: "Edit a distribution\_: %{id} "
@@ -304,7 +308,7 @@ eng:
       # show: "Voir l’aide"
       # toggle: "Basculer l’aide"
     backend/identifiers:
-      # edit: "Modifier l'identifiant\_: %{name}"
+      # edit: "Modifier l’identifiant\_: %{name}"
       # index: "Identifiants"
       # new: "Nouvel identifiant"
       # show: "Identifiant\_: %{name}"
