--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -24,7 +24,6 @@ fra:
         managed: "Géré par le système"
       entity:
         active: "Active"
-        origin: "Lieu de la première rencontre"
       equipment:
         born_at: "Mis en service le"
         content_indicator: "Indicateur de mesure du réservoir"
@@ -826,9 +825,10 @@ fra:
     maximal_length: "Longueur maximale"
     maximal_value: "Valeur maximale"
     measure_value: "Valeur de la mesure"
-    measure_value_unit: "Measure value unit"
-    measure_value_value: "Measure value value"
+    measure_value_unit: "Unité de la mesure"
+    measure_value_value: "Valeur de la mesure"
     meat_withdrawal_period: "Délai d’attente (viande)" #?
+    meeting_origin: "Origine de la rencontre"
     member: "Membre"
     members: "Membres"
     memberships: "Membres du groupe"
@@ -858,7 +858,7 @@ fra:
     number_format: "Format du numéro"
     number_increment: "Incrément"
     number_start: "Début de la numération"
-    observations: "Observations"
+    observations: "Observations" #?
     observed_at: "Observé à"
     of_company: "Dossier basé sur cette entreprise"
     office: "Bureau/Atelier" #?
