--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -32,7 +32,11 @@ jpn:
     backend/aggregators:
       # index: "Agrégateurs"
       # show: "%{name}"
-    backend/analyses: #?
+    backend/analyses:
+      # edit: "Modifier l’analyse N°%{number}"
+      # index: "Analyses"
+      # new: "Nouvelle analyse"
+      # show: "Analyse N°%{number}"
     backend/analysis_items: #?
     backend/analytic_distributions:
       # edit: "Modifier la répartition analytique"
@@ -271,7 +275,7 @@ jpn:
       # show: "Voir l’aide"
       # toggle: "Basculer l’aide"
     backend/identifiers:
-      # edit: "Modifier l'identifiant\_: %{name}"
+      # edit: "Modifier l’identifiant\_: %{name}"
       # index: "Identifiants"
       # new: "Nouvel identifiant"
       # show: "Identifiant\_: %{name}"
