Begins to introduce Handlers for new Variable in interventions

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1363,6 +1363,7 @@ arb:
     index: "العودة الى دليل ادارة الاعمال" #?
     indicator: "لوحة التحكم"
     # indicator_value: "Valeur de l’indicateur"
+    # indicator_with_unit: "%{indicator} (%{unit})"
     # indicators: "Indicateurs"
     # indicators_evolutions: "Évolutions des indicateurs"
     # inel_index: "Index génétique INEL"
