--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1120,6 +1120,7 @@ jpn:
       # waiting: "À encaisser plus tard"
     # indicator: "Indicateur"
     # indicator_value: "Valeur de l’indicateur"
+    # indicator_with_unit: "%{indicator} (%{unit})"
     # indicators: "Indicateurs"
     # indicators_evolutions: "Évolutions des indicateurs"
     # inel_index: "Index génétique INEL"
