--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1224,6 +1224,7 @@ fra:
       waiting: "À encaisser plus tard"
     indicator: "Indicateur"
     indicator_value: "Valeur de l’indicateur"
+    indicator_with_unit: "%{indicator} (%{unit})"
     indicators: "Indicateurs"
     indicators_evolutions: "Évolutions des indicateurs"
     inel_index: "Index génétique INEL"
