--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1943,7 +1943,6 @@ fra:
         cubic_meter: "Mètre cube"
         day: "Jour"
         degree: "Degrée"
-        dozen: "Douzaine"
         english_horsepower: "Cheval-vapeur anglais"
         farenheit: "Farenheit"
         french_horsepower: "Cheval-vapeur français"
@@ -1981,9 +1980,10 @@ fra:
         milliliter: "Millilitre"
         millimeter: "Millimètre"
         million: "Million"
+        # millionth: "Millionth"
+        # millisecond: "Millisecond"
         minute: "Minute"
         mole: "Mole"
-        pair: "Paire"
         parts_per_million: "Partie par millions (ppm)"
         pascal: "Pascal"
         percent: "Pourcent"
@@ -1999,6 +1999,7 @@ fra:
         thousand_per_kilogram: "Millier par kilogramme"
         thousand_per_liter: "Millier par litre"
         thousand_per_milliliter: "Millier par millilitre"
+        # thousandth: "Thousandth"
         ton: "Tonne"
         ton_per_hectare: "Tonne par hectare"
         unity: "Unité"
