--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1236,6 +1236,7 @@ spa:
       # waiting: "À encaisser plus tard"
     # indicator: "Indicateur"
     # indicator_value: "Valeur de l’indicateur"
+    # indicator_with_unit: "%{indicator} (%{unit})"
     # indicators: "Indicateurs"
     # indicators_evolutions: "Évolutions des indicateurs"
     # inel_index: "Index génétique INEL"
