Forces use of namespace in procedures. Default namespace is: base.

--- a/config/locales/arb/procedures.yml
+++ b/config/locales/arb/procedures.yml
@@ -28,33 +28,33 @@ arb:
       # simple_attachment: "On attèle %{carrier} et %{carried}"
       # simple_reading_task: "%{indicator} est mesuré"
   procedures:
-    # all_in_one_sowing: "Semis 'tout-en-un'"
-    # animal_birth: "Naissance d’un animal"
-    # animal_treatment: "Traitement animal"
-    # calving_one: "Vêlage unique"
-    # calving_twin: "Vêlage jumeaux"
-    # direct_silage: "Ensilage direct"
-    # grains_harvest: "Moisson"
-    # hoeing: "Binage"
-    # indirect_silage: "Ensilage indirect"
-    # mammal_herd_milking: "Traite d'un troupeau"
-    # mammal_milking: "Traite d'un animal"
-    # manual_vine_harvest: "Vendange manuelle"
-    # mecanical_vine_harvest: "Vendange mécanique"
-    # mineral_fertilizing: "Fertilisation minérale"
-    # organic_fertilizing: "Fertilisation organique"
-    # partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
-    # plant_grinding: "Broyage de végétaux"
-    # plant_mowing: "Fauchage"
-    # plowing: "Labour"
-    # raking: "Hersage"
-    # sowing: "Semis"
-    # spraying_on_cultivation: "Pulvérisation sur culture"
-    # straw_bunching: "Pressage de fourrages"
-    # superficial_plowing: "Déchaumage / Décompactage / Préparation du sol"
-    # vine_plant: "Plantation de vigne"
-    # wheat_crop: "Culture de blé (standard)"
-    # wine_transfer: "Transfert de vin"
+    # base-all_in_one_sowing: "Semis 'tout-en-un'"
+    # base-animal_birth: "Naissance d’un animal"
+    # base-animal_treatment: "Traitement animal"
+    # base-calving_one: "Vêlage unique"
+    # base-calving_twin: "Vêlage jumeaux"
+    # base-direct_silage: "Ensilage direct"
+    # base-grains_harvest: "Moisson"
+    # base-hoeing: "Binage"
+    # base-indirect_silage: "Ensilage indirect"
+    # base-mammal_herd_milking: "Traite d'un troupeau"
+    # base-mammal_milking: "Traite d'un animal"
+    # base-manual_vine_harvest: "Vendange manuelle"
+    # base-mecanical_vine_harvest: "Vendange mécanique"
+    # base-mineral_fertilizing: "Fertilisation minérale"
+    # base-organic_fertilizing: "Fertilisation organique"
+    # base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
+    # base-plant_grinding: "Broyage de végétaux"
+    # base-plant_mowing: "Fauchage"
+    # base-plowing: "Labour"
+    # base-raking: "Hersage"
+    # base-sowing: "Semis"
+    # base-spraying_on_cultivation: "Pulvérisation sur culture"
+    # base-straw_bunching: "Pressage de fourrages"
+    # base-superficial_plowing: "Déchaumage / Décompactage / Préparation du sol"
+    # base-vine_plant: "Plantation de vigne"
+    # base-wheat_crop: "Culture de blé (standard)"
+    # base-wine_transfer: "Transfert de vin"
   variables:
     # baler: "Botteleuse"
     # baler_driver: "Conducteur (tracteur-botteleuse)"
