Begins to view how to use handler formulas

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1263,7 +1263,7 @@ fra:
         # charentes_alliance_extranet: "Charentes alliance extranet"
         # lilco: "Lilco"
         # msa: "Msa"
-        # synel17: "Synel17"
+        # synel: "Synel"
         # telepac: "Telepac"
     nmp_methods:
       # name: "Nmp methods"
