--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1725,7 +1725,7 @@ fra:
         calf: "Veau"
         cattle_herd: "Troupeau de bovins"
         cereal_crop: "Culture de céréales"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         complete_sower: "Semoir équipé"
         crop: "Culture"
         cultivable_zone: "Zone cultivable"
@@ -2065,7 +2065,7 @@ fra:
         carmenere_noir: "Carménère noir"                   # vitis_vinifera
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)" # land_parcel
         chardonnay: "Chardonnay"                           # vitis_vinifera
-        chemical_fertilizer: "Engrais chimique"            # mineral_matter
+        chemical_fertilizer: "Engrais minéral"            # mineral_matter
         chesnut_red_soil: "Terres rouges à châtaigniers"   # land_parcel
         cichorium: "Chicoré"                               # asteraceae
         clay_limestone_soil: "Sol argilo-calcaire (Groies)" # land_parcel
