--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -301,6 +301,7 @@ jpn:
       # account_balance: "Balance de compte"
       # activity: "Activité"
       # affair: "Affaire"
+      # analysis: "Analyse"
       # analytic_distribution: "Répartition analytique"
       # animal: "Animal"
       # animal_group: "Groupe d’animaux"
@@ -451,6 +452,8 @@ jpn:
     # allocation_account: "Compte de dotation"
     # amount: "Montant"
     # amounts_scale: "Nombre de chiffres après le virgule"
+    # analyser: "Analyseur"
+    # analyses: "Analyses"
     # analysis: "Analyses"
     # annotation: "Annotation"
     # archived_at: "Archivé le"
@@ -562,12 +565,14 @@ jpn:
     # created_at: "Date de création"
     creator: "創始者"
     creator_id: "創始者" #?
+    # creator_name: "Nom du créateur"
     # credit: "Crédit"
     # credit_lines: "Lignes d’avoir"
     # credited_quantity: "Quantité déjà passée en avoir"
     # credits: "Avoirs"
     # critic_quantity_min: "Quantité minimum critique"
     # critic_stocks: "Stocks critiques"
+    # cultivable_zones: "Zones cultivables"
     # currency: "Devise"
     # currency_precision: "Nombre de décimales"
     # currency_rate: "Taux de change"
@@ -597,6 +602,7 @@ jpn:
     # deduction_taxes: "TVA déductible"
     # default_mail_address: "Adresse email par défaut"
     # default_storage: "Emplacement par défaut"
+    # default_variant: "Variant par défault"
     # deferred_payment: "Crédit à reporter"
     # deleted_at: "Supprimé le"
     # deliverable: "Livrable"
@@ -657,6 +663,7 @@ jpn:
     # encrypted_password: "Mot de passe crypté"
     # end_junction: "End junction"
     # end_way: "End way"
+    # enjoyer: "Usufruitier"
     # enjoyments: "Enjoyments"
     # entity: "Personne"
     # entity_1: "Personne 1"
@@ -669,6 +676,7 @@ jpn:
     # entry_items: "Lignes d’écritures"
     # establishment: "Établissement"
     # event: "Évènement"
+    # events: "Évènements"
     # exclusive: "Exclusif"
     # execution_number: "N° d’exécution"
     # expiration_delay: "Délai d’expiration"
@@ -701,6 +709,9 @@ jpn:
     # frozen_indicators_list: "Frozen indicators list"
     # full_name: "Nom complet"
     # function_title: "Civilités"
+    # gap: "Ecart"
+    # gaps: "Ecarts"
+    # geolocation: "Géolocalisation"
     # geometry_value: "Geometry value"
     # global_balance: "Solde global"
     # global_count: "Population globale"
@@ -716,6 +727,7 @@ jpn:
     # iban: "IBAN"
     id: "唯一の番号"
     # identification_number: "Numéro d’identification"
+    # identifiers: "Identifiants"
     # importance: "Importance"
     # in_cash: "En espèce"
     # included: "Incluse"
@@ -793,6 +805,7 @@ jpn:
     lock_version: "修正の番号"
     # locked: "Verrouillé"
     # locked_at: "Verrouillé à"
+    # made_at: "Fait le"
     # mail: "E-mail"
     # mail_addresses: "Adresses postales"
     # mail_auto_update: "Mettre à jour l’adresse automatiquement"
@@ -1007,6 +1020,8 @@ jpn:
     # sales: "Ventes"
     # sales_conditions: "Conditions Générales de Vente"
     # sales_invoices: "Factures"
+    # sampled_at: "Prélevé le"
+    # sampler: "Préleveur"
     # scheduled: "Encaissement programmé"
     # sender: "Expéditeur"
     # sent_at: "Expédié le"
