--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -36,6 +36,9 @@ fra:
         straw_cereal_crops: "Céréales à paille"
         vegetal_crops: "Production végétale"
         vine_wine: "Vigne et vin"
+    analysis:
+      nature:
+        cow_milk_analysis: "Analyse de lait de vache"
     animal:
       variety:
         acetal: "Acetal"
@@ -86,7 +89,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -322,7 +325,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -558,7 +561,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1056,7 +1059,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1362,7 +1365,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1806,7 +1809,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2150,7 +2153,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2386,7 +2389,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2597,6 +2600,7 @@ fra:
         account_balance: "Balance de compte"
         activity: "Activité"
         affair: "Affaire"
+        analysis: "Analyse"
         analytic_distribution: "Répartition analytique"
         animal: "Animal"
         animal_group: "Groupe d’animaux"
@@ -2763,7 +2767,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2999,7 +3003,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3284,7 +3288,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3520,7 +3524,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3756,7 +3760,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3991,7 +3995,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4227,7 +4231,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4463,7 +4467,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4665,7 +4669,7 @@ fra:
         calf: "Veau"
         cattle_herd: "Troupeau de bovins"
         cereal_crop: "Culture de céréales"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         complete_sower: "Semoir équipé"
         crop: "Culture"
         cultivable_zone: "Zone cultivable"
@@ -4784,7 +4788,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -5053,7 +5057,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -5288,7 +5292,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -5708,7 +5712,7 @@ fra:
         carmenere_noir: "Carménère noir"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
-        chemical_fertilizer: "Engrais chimique"
+        chemical_fertilizer: "Engrais minéral"
         chesnut_red_soil: "Terres rouges à châtaigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
